DTS-45171: fixed sonar quality gates