@@ -127,48 +127,8 @@ public class SonarTechDebtServiceImpl extends SonarKPIService<Long, List<Object>
 		getSonarHistoryForAllProjects(pList,
 				getScrumCurrentDateToFetchFromDb(CommonConstant.WEEK, (long) customApiConfig.getSonarWeekCount()))
 				.forEach((projectNodePair, projectData) -> {
-					List<String> projectList = new ArrayList<>();
-					List<String> debtList = new ArrayList<>();
-					List<String> versionDate = new ArrayList<>();
-					Map<String, List<DataCount>> projectWiseDataMap = new HashMap<>();
 					if (CollectionUtils.isNotEmpty(projectData)) {
-						boolean isBacklogProject = CollectionUtils.isNotEmpty(sprintLeafNodeList) && sprintLeafNodeList
-								.get(0).getProjectFilter().getName().equalsIgnoreCase(projectNodePair.getValue());
-						LocalDate endDateTime = isBacklogProject
-								? DateUtil.stringToLocalDate(sprintLeafNodeList.get(0).getSprintFilter().getEndDate()
-										.replaceAll(DATE_TIME_FORMAT_REGEX, ""), DateUtil.TIME_FORMAT)
-								: LocalDate.now().minusWeeks(1);
-						for (int i = 0; i < customApiConfig.getSonarWeekCount(); i++) {
-							LocalDate[] weeks = getWeeks(endDateTime);
-							LocalDate monday = weeks[0];
-							LocalDate sunday = weeks[1];
-							if (isBacklogProject) {
-								monday = endDateTime.minusDays(6);
-								sunday = endDateTime;
-							}
-
-							String date = DateUtil.dateTimeConverter(monday.toString(), DateUtil.DATE_FORMAT,
-									DateUtil.DISPLAY_DATE_FORMAT) + " to "
-									+ DateUtil.dateTimeConverter(sunday.toString(), DateUtil.DATE_FORMAT,
-											DateUtil.DISPLAY_DATE_FORMAT);
-							Long startms = monday.atStartOfDay(ZoneId.systemDefault()).toInstant().toEpochMilli();
-							Long endms = sunday.atStartOfDay(ZoneId.systemDefault()).toInstant().toEpochMilli();
-							Map<String, SonarHistory> history = prepareJobwiseHistoryMap(projectData, startms, endms);
-
-							if (MapUtils.isEmpty(history)) {
-								history = prepareEmptyJobWiseHistoryMap(projectData, endms);
-							}
-							prepareSqualeList(history, date, projectNodePair.getValue(), projectList, debtList,
-									projectWiseDataMap, versionDate);
-
-							endDateTime = endDateTime.minusWeeks(1);
-						}
-						tempMap.get(projectNodePair.getKey()).setValue(projectWiseDataMap);
-						if (getRequestTrackerId().toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
-							KPIExcelUtility.populateSonarKpisExcelData(
-									tempMap.get(projectNodePair.getKey()).getProjectFilter().getName(), projectList, debtList,
-									versionDate, excelData, KPICode.SONAR_TECH_DEBT.getKpiId());
-						}
+						processProjectData(projectNodePair, projectData, sprintLeafNodeList, tempMap, excelData);
 					}
 				});
 
@@ -176,6 +136,48 @@ public class SonarTechDebtServiceImpl extends SonarKPIService<Long, List<Object>
 		kpiElement.setExcelColumns(KPIExcelColumn.SONAR_TECH_DEBT.getColumns());
 	}
 
+	private void processProjectData(Pair<String, String> projectNodePair, List<SonarHistory> projectData,
+			List<Node> sprintLeafNodeList, Map<String, Node> tempMap, List<KPIExcelData> excelData) {
+		List<String> projectList = new ArrayList<>();
+		List<String> debtList = new ArrayList<>();
+		List<String> versionDate = new ArrayList<>();
+		Map<String, List<DataCount>> projectWiseDataMap = new HashMap<>();
+
+		boolean isBacklogProject = CollectionUtils.isNotEmpty(sprintLeafNodeList)
+				&& sprintLeafNodeList.get(0).getProjectFilter().getName().equalsIgnoreCase(projectNodePair.getValue());
+		LocalDate endDateTime = isBacklogProject ? DateUtil.stringToLocalDate(
+				sprintLeafNodeList.get(0).getSprintFilter().getEndDate().replaceAll(DATE_TIME_FORMAT_REGEX, ""),
+				DateUtil.TIME_FORMAT) : LocalDate.now().minusWeeks(1);
+
+		for (int i = 0; i < customApiConfig.getSonarWeekCount(); i++) {
+			LocalDate monday = isBacklogProject ? endDateTime.minusDays(6) : getWeeks(endDateTime)[0];
+			LocalDate sunday = isBacklogProject ? endDateTime : getWeeks(endDateTime)[1];
+			String date = DateUtil.dateTimeConverter(monday.toString(), DateUtil.DATE_FORMAT,
+					DateUtil.DISPLAY_DATE_FORMAT) + " to "
+					+ DateUtil.dateTimeConverter(sunday.toString(), DateUtil.DATE_FORMAT, DateUtil.DISPLAY_DATE_FORMAT);
+
+			Long startms = monday.atStartOfDay(ZoneId.systemDefault()).toInstant().toEpochMilli();
+			Long endms = sunday.atTime(23, 59, 59).atZone(ZoneId.systemDefault()).toInstant().toEpochMilli();
+
+			Map<String, SonarHistory> history = prepareJobwiseHistoryMap(projectData, startms, endms);
+			if (MapUtils.isEmpty(history)) {
+				history = prepareEmptyJobWiseHistoryMap(projectData, endms);
+			}
+
+			prepareSqualeList(history, date, projectNodePair.getValue(), projectList, debtList, projectWiseDataMap,
+					versionDate);
+			endDateTime = endDateTime.minusWeeks(1);
+		}
+
+		tempMap.get(projectNodePair.getLeft()).setValue(projectWiseDataMap);
+
+		if (getRequestTrackerId().toLowerCase().contains(KPISource.EXCEL.name().toLowerCase())) {
+			KPIExcelUtility.populateSonarKpisExcelData(
+					tempMap.get(projectNodePair.getKey()).getProjectFilter().getName(), projectList, debtList,
+					versionDate, excelData, KPICode.SONAR_TECH_DEBT.getKpiId());
+		}
+	}
+	
 	private Map<String, Object> prepareSqualeList(Map<String, SonarHistory> history, String date, String projectName,
 			List<String> projectList, List<String> debtList, Map<String, List<DataCount>> projectWiseDataMap,
 			List<String> versionDate) {
@@ -216,7 +218,7 @@ public class SonarTechDebtServiceImpl extends SonarKPIService<Long, List<Object>
 		metricsList.add(sonarMetric);
 
 		List<String> uniqueKeys = sonarHistoryList.stream().map(SonarHistory::getKey).distinct()
-				.collect(Collectors.toList());
+				.toList();
 		uniqueKeys.forEach(keys -> {
 			SonarHistory sonarHistory = SonarHistory.builder().processorItemId(refHistory.getProcessorItemId()).date(end)
 					.timestamp(end).key(keys).name(keys).branch(refHistory.getBranch()).metrics(metricsList).build();
